# QuestPackageManager-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  qpm.schema.json
.github/workflows/: cargo build.yml  cargo-build.yml  pull-request.yml  windows-installer.yml
installer/: installer.iss
src/: cache.rs  clear.rs  cli.yaml  collapse.rs  collect.rs  config.rs  dependency.rs  main.rs  package.rs  propertieslist.rs  publish.rs  qmod.rs  qpm_types.rs  restore.rs
src/commands/: cache.rs  clear.rs  collapse.rs  collect.rs  config.rs  dependency.rs  list.rs  mod.rs  package.rs  propertieslist.rs  publish.rs  qmod.rs  restore.rs
src/commands/config/: cache.rs  mod.rs  ndkpath.rs  symlink.rs  timeout.rs  token.rs
src/commands/list/: extra_properties.rs  mod.rs  packages.rs  versions.rs
src/commands/package/: create.rs  edit.rs  edit_extra.rs  mod.rs
src/commands/qmod/: edit.rs  mod.rs
src/data/: android_mk.rs  c_make.rs  config.rs  dependency.rs  mod.rs  mod_json.rs  package.rs  qpackages.rs  qpm_types.rs  shared_dependency.rs  shared_package.rs
src/data/dependency/: dependency_internal.rs  mod.rs  shared_dependency.rs
src/data/package/: compile_options.rs  mod.rs  package_config.rs  shared_package_config.rs
src/resolver/: mod.rs  provider.rs  semver.rs
src/utils/: git.rs  github.rs  mod.rs  toggle.rs  tokenstream.rs
