[package]
name = "qpm-rust"
version = "0.1.0"
authors = ["Adam ? <adamznow@gmail.com>", "RedBrumbler <redbrumbler.official@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.4" }
ureq = {version = "2.1.1", features = ["json"]}
semver = { version = "1", features = ["serde"] }
unwrap = "1.2.1"
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git" }
colored = "2.0.0"
dirs = "4.0.0"
once_cell = "1"