[package]
name = "qpm-rust"
version = "0.1.0"
authors = [
    "Adam ? <adamznow@gmail.com>",
    "RedBrumbler <redbrumbler.official@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.4" }
ureq = { version = "2.1.1", features = ["json"] }
semver = { version = "1", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
owo-colors = "3"
dirs = "4.0.0"
keyring = "0.10.1"
duct = "0.13.5"
zip = "0.5.13"
remove_dir_all = "0.7.0"
walkdir = "2"
symlink = "0.1.0"
fs_extra = "1.2.0"
